Fixed hamburger z-index

--- a/src/components/Layout/styles/Header.css
+++ b/src/components/Layout/styles/Header.css
@@ -61,6 +61,7 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  z-index: 99;
 }
 
 .menu > li {
